# Klaro

./: .gitignore  README.md  download_model.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  file_parser.rs  license.rs  main.rs  ner.rs  pii_detector.rs  scrubber.rs  streaming.rs
src/lib/components/: file-upload.svelte  header.svelte  pii-options.svelte  results-panel.svelte  scrub-method-select.svelte
src/lib/components/ui/alert/: alert.svelte
