[package]
name = "rusty-scrubber"
version = "0.1.0"
description = "A privacy-focused data scrubber that removes, hashes, or fakes PII"
authors = ["Chukwuma Okoroji"]
license = "MIT"
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"
calamine = "0.33.0"
regex = "1.12.3"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
chrono = "0.4.43"
base64 = "0.22.1"
fake = { version = "4.4.0", features = ["derive"] }

[features]
default = ["lite"]

# Lite version - limited features for trial
lite = []

# Pro version - full features
pro = []

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Combine lite with custom-protocol for release
lite-release = ["lite", "custom-protocol"]
pro-release = ["pro", "custom-protocol"]
