[package]
name = "klaro"
version = "1.0.0"
description = "A privacy-focused data scrubber that removes, hashes, or fakes PII"
authors = ["Chukwuma Okoroji"]
license = "MIT"
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"
calamine = "0.33.0"
regex = "1.12.3"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
chrono = "0.4.43"
base64 = "0.22.1"
fake = { version = "4.4.0", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
tokenizers = "0.22.2"

# Base candle (CPU-only) for non-macOS
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2", features = ["metal"] }
objc = "0.2.7"

[features]
default = ["pro"]

lite = []
pro = []

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
lite-release = ["lite", "custom-protocol"]
pro-release = ["pro", "custom-protocol"]
